Minor fixes: text overflow

--- a/index.css
+++ b/index.css
@@ -133,6 +133,12 @@ body.ng-scope {
     margin-bottom: 10px;
 }
 
+@media (min-width: 768px) {
+    .dl-horizontal dt {
+        width: 170px !important;
+    }
+}
+
 .estimate-result button {
     font-family: MerloRoundMedium;
     font-size: 16px;
